[package]
name = "qlean"
version = "0.2.2"
authors = ["jl.jiang <jiangjl9807@gmail.com>"]
categories = ["development-tools::testing", "virtualization"]
description = "A system-level isolation testing library based on QEMU/KVM."
documentation = "https://docs.rs/qlean"
edition = "2024"
exclude = ["/.github"]
keywords = ["isolation", "testing", "kvm", "qemu"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/buck2hub/qlean"

[dependencies]
anyhow = "1.0.100"
console = "0.16.2"
dir-lock = "0.5.0"
directories = "6.0.0"
futures = "0.3"
kvm-ioctls = "0.24.0"
nanoid = "0.4.0"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["stream"] }
russh = "0.55.0"
russh-sftp = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yml = "0.0.12"
shell-escape = "0.1.5"
termion = "4.0.6"
tokio = { version = "1", features = ["full"] }
tokio-fd = "0.3.0"
tokio-util = "0.7.18"
tokio-vsock = "0.7.2"
tracing = { version = "0.1.43", features = ["log"] }
walkdir = "2.5.0"

[dev-dependencies]
serial_test = "3.3.1"
tempfile = "3.24.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time"] }
